# drone_flight_report

./: CMakeLists.txt  README.md  default.nix  package.xml  setup.py
examples/: bad_objective.bag  flight_report.csv  genbag.py  objective.bag  result.bag  test_demand.yaml
launch/: agent.launch
robonomics/: agent_drone_flight_report.model
scripts/: offer_node  registrator_node
